--- a/core/src/main/resources/templates/core/management_social_network_images.html
+++ b/core/src/main/resources/templates/core/management_social_network_images.html
@@ -41,6 +41,11 @@
                                         <input type="text" name="query" class="form-control" placeholder="Search…">
                                     </form>
                                 </span>
+                                <a href="#addSocialNetworkImagesModal" id="addSocialNetworkImagesBtn" class="btn btn-success"
+                                   data-toggle="modal"><i class="material-icons">&#xE147;</i>
+                                    <span>Add Social Network Images News</span></a>
+                                <a href="#deleteAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i
+                                        class="material-icons">&#xE15C;</i> <span>Delete</span></a>
                         </div>
                     </div>
                 </div>
@@ -71,6 +76,14 @@
                             <td th:text="${socialnetworkimage.id}"></td>
                             <td th:text="${socialnetworkimage.hostPath}"> <a> th:href="${socialnetworkimage.hostPath}"</a></td>
                             <td>    <img th:src="${socialnetworkimage.imagePath}"></td>
+                            <td>
+                                <a th:href="@{/management/socialnetworkimages/find/(id=${socialnetworkimage.getId()})}" class="edit eBtn">
+                                    <i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i>
+                                </a>
+                                <a th:href="@{/management/socialnetworkimages/delete/(id=${socialnetworkimage.getId()})}" class="delete eDelBtn" data-toggle="modal">
+                                    <i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i>
+                                </a>
+                            </td>
                         </tr>
                         </tbody>
                     </th:block>
@@ -94,6 +107,147 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Modal HTML -->
+    <div id="addSocialNetworkImagesModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form th:action="@{management/socialnetworkimages}" method="post" id="addSocialNetworkImagesForm">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Add Social Network Images</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" class="form-control" name="id" value="-1" readonly required>
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" class="form-control" name="title" required>
+                            <span th:id="errorModalSavetitle" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>Text</label>
+                            <input type="text" class="form-control" name="text" required>
+                            <span th:id="errorModalSavetext" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>Tags</label>
+                            <input type="text" class="form-control" name="tags" required>
+                            <span th:id="errorModalSavetags" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>Source</label>
+                            <input type="text" class="form-control" name="source">
+                        </div>
+                        <div class="form-group">
+                            <label>Image</label>
+                            <input type="file" class="form-control" name="file" id="creationFile">
+                            <span th:id="errorModalSavefile" class="errorSpan"></span>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-success" value="Add" id="submitAddBtn">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Edit Modal HTML -->
+    <div id="editSocialNetworkImagesModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="editSocialNetworkImagesForm">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Edit </h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="id">ID</label>
+                            <input type="text" class="form-control" id="id" name="id" readonly required>
+                            <span th:id="errorModalUpdateid" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="title">Title</label>
+                            <input type="text" class="form-control" id="title" name="title" required>
+                            <span th:id="errorModalUpdatetitle" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="text">Text</label>
+                            <input type="text" class="form-control" id="text" name="text" required>
+                            <span th:id="errorModalUpdatetext" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="tags">Tags</label>
+                            <input type="text" class="form-control" id="tags" name="tags" required>
+                            <span th:id="errorModalUpdatetags" class="errorSpan"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="imagePath">Image</label>
+                            <input type="text" class="form-control" id="imagePath" name="imagePath">
+                        </div>
+                        <div class="form-group">
+                            <label for="source">Source</label>
+                            <input type="text" class="form-control" id="source" name="source">
+                        </div>
+                        <div class="form-group">
+                            <label for="file">Image</label>
+                            <input type="file" class="form-control" id="file" name="file">
+                            <span th:id="errorModalUpdatefile" class="errorSpan"></span>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-info" value="Save" id="submitEditBtn">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Modal HTML -->
+    <div id="deleteSocialNetworkImagesModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="deleteSocialNetworkImagesForm">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Delete Social Network Images</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete that Record?</p>
+                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <a href="" id="deleteOneSubmit" class="btn btn-danger">Delete</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Delete all selected Modal HTML -->
+    <div id="deleteAllSelectedModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Delete all selected</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete these Records?</p>
+                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <a href="" id="deleteAllSubmit" class="btn btn-danger">Delete</a>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
