issue1351 Implement filtering and exporting rating statistics data (#1535)
* filters implemented

* export filtered data implemented

* docs added, some refactoring

* filter changed

* export filtered data fixed

* doc changed

* small refactoring

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -286,3 +286,11 @@ table.table .avatar {
     top: 8px;
     left: 10px;
 }
+input[type=search] {
+    border: 1px dotted #999;
+    border-radius: 0;
+    width : 110px;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+}
