--- a/core/src/main/resources/templates/core/management_tips_and_tricks.html
+++ b/core/src/main/resources/templates/core/management_tips_and_tricks.html
@@ -43,14 +43,6 @@
                             <a href="#deleteAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i
                                     class="material-icons">&#xE15C;</i> <span>Delete</span></a>
                         </div>
-                        <div class="col-sm-6">
-                            <div class="search-box">
-                                <form class="searching" th:action="@{/management/tipsandtricks}" method="get">
-                                    <i class="material-icons">&#xE8B6;</i>
-                                    <input type="text" name="query" class="form-control" placeholder="Search&hellip;">
-                                </form>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <table class="table table-striped table-hover">
@@ -63,7 +55,7 @@
                                 </span>
                         </th>
                         <th>id</th>
-                        <th>title</th>
+                        <th>title translations</th>
                         <th>author</th>
                         <th>imagePath</th>
                         <th>creationDate</th>
@@ -123,8 +115,27 @@
                                     </span>
                             </td>
                             <td th:text="${tipsAndTricks.getId()}"></td>
-                            <td th:text="${tipsAndTricks.getTitle()}"></td>
-                            <td th:text="${tipsAndTricks.getAuthor().getName()}"></td>
+                            <td>
+                                <table class="table table-borderless m-0">
+                                    <thead>
+                                    <tr class="table-secondary">
+                                        <th class="py-1">Content</th>
+                                        <th class="py-1">LanguageCode</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <th:block
+                                            th:each="translation : ${tipsAndTricks.getTitleTranslations()}">
+                                        <tr>
+                                            <td class="py-1" th:text="${translation.getContent()}"></td>
+                                            <td class="py-1" th:text="${translation.getLanguageCode()}"></td>
+                                        </tr>
+                                    </th:block>
+                                    </tbody>
+                                </table>
+                            </td>
+
+                            <td th:text="${tipsAndTricks.getAuthorName()}"></td>
                             <td><img th:src="${tipsAndTricks.getImagePath()}" th:width="150" th:height="100"></td>
                             <td th:text="${#temporals.format(tipsAndTricks.getCreationDate(), 'dd/MM/yyyy HH:mm')}"></td>
                             <td>
@@ -133,7 +144,8 @@
                                         class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                                 <a th:href="@{/management/tipsandtricks/(id=${tipsAndTricks.getId()})}"
                                    class="delete eDelBtn"
-                                   data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                   data-toggle="modal"><i class="material-icons" data-toggle="tooltip"
+                                                          title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
                         </tbody>
@@ -172,14 +184,34 @@
                     <div class="modal-body">
                         <input type="hidden" class="form-control" name="id" value="-1" readonly required>
                         <div class="form-group">
-                            <label>Title</label>
-                            <input type="text" class="form-control" name="title" required>
-                            <span th:id="errorModalSavetitle" class="errorSpan"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>Text</label>
-                            <input type="text" class="form-control" name="text" required>
-                            <span th:id="errorModalSavetext" class="errorSpan"></span>
+                            <th:block th:each="language, iterInfo : ${languages}">
+                                <th:block th:switch="${language.getCode()}">
+                                    <label th:case="'ua'">Заголовок</label>
+                                    <label th:case="'en'">Title</label>
+                                    <label th:case="'ru'">Заглавие</label>
+                                </th:block>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" th:text="${language.getCode()}" th:name="${language.getCode()}"></span>
+                                    </div>
+                                    <input type="text" class="form-control"
+                                           id="titleContent+${language.getCode()}"
+                                           th:name="titleContent+${language.getCode()}">
+                                    <span th:id="'errorModalSaveTopsAndTricksTranslations['+${iterInfo.index}+'].content'"
+                                          class="errorSpan"></span>
+                                </div>
+                                <div class="form-group">
+                                    <th:block th:switch="${language.getCode()}">
+                                        <label th:case="'ua'">Teкст</label>
+                                        <label th:case="'en'">Text</label>
+                                        <label th:case="'ru'">Teкст</label>
+                                    </th:block>
+                                    <textarea type="text" class="form-control"
+                                              th:name="textContent+${language.getCode()}"></textarea>
+                                    <span th:id="'errorModalSaveTopsAndTricksTranslations['+${iterInfo.index}+'].content'"
+                                          class="errorSpan"></span>
+                                </div>
+                            </th:block>
                         </div>
                         <div class="form-group">
                             <label>Tags</label>
@@ -220,15 +252,35 @@
                             <input type="text" class="form-control" id="id" name="id" readonly required>
                             <span th:id="errorModalUpdateid" class="errorSpan"></span>
                         </div>
+
                         <div class="form-group">
-                            <label for="title">Title</label>
-                            <input type="text" class="form-control" id="title" name="title" required>
-                            <span th:id="errorModalUpdatetitle" class="errorSpan"></span>
-                        </div>
-                        <div class="form-group">
-                            <label for="text">Text</label>
-                            <input type="text" class="form-control" id="text" name="text" required>
-                            <span th:id="errorModalUpdatetext" class="errorSpan"></span>
+                            <th:block th:each="language, iterInfo : ${languages}">
+                                <th:block th:switch="${language.getCode()}">
+                                    <label th:case="'ua'">Заголовок</label>
+                                    <label th:case="'en'">Title</label>
+                                    <label th:case="'ru'">Заглавие</label>
+                                </th:block>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" th:text="${language.getCode()}" th:name="${language.getCode()}"></span>
+                                    </div>
+                                    <input type="text" class="form-control"
+                                           th:name="titleContent+${language.getCode()}">
+                                    <span th:id="'errorModalSaveTopsAndTricksTranslations['+${iterInfo.index}+'].content'"
+                                          class="errorSpan"></span>
+                                </div>
+                                <div class="form-group">
+                                    <th:block th:switch="${language.getCode()}">
+                                        <label th:case="'ua'">Teкст</label>
+                                        <label th:case="'en'">Text</label>
+                                        <label th:case="'ru'">Teкст</label>
+                                    </th:block>
+                                    <textarea type="text" class="form-control"
+                                              th:name="textContent+${language.getCode()}"></textarea>
+                                    <span th:id="'errorModalSaveTopsAndTricksTranslations['+${iterInfo.index}+'].content'"
+                                          class="errorSpan"></span>
+                                </div>
+                            </th:block>
                         </div>
                         <div class="form-group">
                             <label for="tags">Tags</label>
@@ -236,10 +288,10 @@
                             <span th:id="errorModalUpdatetags" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="emailAuthor">Author</label>
-                            <input type="email" class="form-control" id="emailAuthor" name="emailAuthor" readonly
+                            <label for="authorName">Author</label>
+                            <input type="email" class="form-control" id="authorName" name="authorName" readonly
                                    required>
-                            <span th:id="errorModalUpdateemailAuthor" class="errorSpan"></span>
+                            <span th:id="errorModalUpdateauthorName" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label for="imagePath">Image</label>
